Coloratura Soprano: biographie, répertoire, déclaration artistique, liens mis à jour

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zlata Beltran — Mezzo-Soprano Coloratura</title>
+    <title>Zlata Beltran — Coloratura Soprano</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
@@ -22,6 +22,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#biography">Biography</a></li>
                 <li><a href="#repertoire">Repertoire</a></li>
+                <li><a href="#statement">Artist Statement</a></li>
                 <li><a href="#media">Media</a></li>
                 <li><a href="#press">Press Kit</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -41,8 +42,8 @@
         </div>
         <div class="hero-container">
             <h1 class="hero-name">Zlata Beltran</h1>
-            <p class="hero-subtitle">Mezzo-Soprano Coloratura</p>
-            <p class="hero-tagline">A voice combining lyrical warmth, agility and flexibility</p>
+            <p class="hero-subtitle">Coloratura Soprano</p>
+            <p class="hero-tagline">Paris, France · management@zlatabeltran.com</p>
         </div>
     </section>
 
@@ -51,11 +52,11 @@
         <div class="container">
             <h2 class="section-title">Biography</h2>
             <div class="biography-content">
-                <p>Zlata Beltran is a young mezzo-soprano coloratura whose voice combines lyrical warmth, agility and flexibility. Based in Paris, she studied with Prof. Galina Gorchakova (Saint-Petersburg State University, 2015–2019) and Prof. Lyudmila Ivanova (2018–2025), shaping her vocal identity through dedicated study and the European Fach tradition.</p>
+                <p>Zlata Beltran is an emerging coloratura soprano whose voice combines brilliance, agility and lyrical warmth. Based in Paris, she is at the beginning of her artistic career, developing her vocal identity through dedicated private study, international coaching and masterclasses.</p>
                 
-                <p>Her vocal profile aligns naturally with the mezzo-soprano coloratura Fach: a voice capable of expressive legato, agile passagework, and both warmth in the middle register and clarity in florid writing. Zlata is drawn to repertoire that highlights emotional nuance and technical finesse, from Rossini and Bellini to Mozart and Handel.</p>
+                <p>Her voice is characterized by clarity of tone, flexibility in coloratura passages and a bright, ringing upper register. Zlata is drawn to music that highlights both expressive nuance and technical finesse, reflecting the stylistic qualities associated with the coloratura Fach.</p>
                 
-                <p>She has performed at Paris Investor Week, in a solo concert at the Orthodox and Cultural Center in Paris, at Sri Lanka Culture Days (Embassy of Sri Lanka project), and on a chamber music tour in Germany (Hamburg, Berlin, Greifswald). She approaches each role with humility, curiosity, and respect for healthy vocal growth and stylistic refinement.</p>
+                <p>She performs in recitals, chamber concerts and sacred programs across Europe, approaching each project with humility, curiosity and respect for the vocal traditions of the classical repertoire. Her artistic priorities emphasize vocal health, stylistic authenticity and sincere musical storytelling.</p>
             </div>
         </div>
     </section>
@@ -65,13 +66,17 @@
         <div class="container">
             <h2 class="section-title">Repertoire</h2>
             <div class="repertoire-category">
-                <h3 class="repertoire-category-title">Operatic Repertoire — Mezzo-Soprano Coloratura</h3>
+                <h3 class="repertoire-category-title">Operatic Repertoire — Coloratura Soprano</h3>
                 <ul class="repertoire-list">
-                    <li>Gioachino Rossini — <em>Il barbiere di Siviglia</em> (Rosina), <em>L'italiana in Algeri</em> (Isabella), <em>La Cenerentola</em> (Angelina)</li>
-                    <li>Vincenzo Bellini — <em>I Capuleti e i Montecchi</em> (Romeo)</li>
-                    <li>Wolfgang Amadeus Mozart — <em>Le nozze di Figaro</em> (Cherubino)</li>
-                    <li>Giacomo Meyerbeer — <em>Les Huguenots</em> (Urbain, Page du Roi)</li>
-                    <li>George Frideric Handel — <em>Serse</em> (Xerxes) (Amastris)</li>
+                    <li>Cleopatra — <em>Giulio Cesare</em> (Händel)</li>
+                    <li>Queen of the Night (Königin der Nacht) — <em>Die Zauberflöte</em> (Mozart)</li>
+                    <li>Giulietta — <em>I Capuleti e i Montecchi</em> (Bellini)</li>
+                    <li>Lucia — <em>Lucia di Lammermoor</em> (Donizetti)</li>
+                    <li>Adina — <em>L'elisir d'amore</em> (Donizetti)</li>
+                    <li>Norina — <em>Don Pasquale</em> (Donizetti)</li>
+                    <li>Juliette — <em>Roméo et Juliette</em> (Gounod)</li>
+                    <li>Olympia — <em>Les Contes d'Hoffmann</em> (Offenbach)</li>
+                    <li>Gilda — <em>Rigoletto</em> (Verdi)</li>
                 </ul>
             </div>
 
@@ -80,9 +85,22 @@
                 <ul class="repertoire-list">
                     <li>Mozart — <em>Exsultate, jubilate</em></li>
                     <li>Vivaldi — <em>In furore iustissimae irae</em></li>
-                    <li>Handel — mezzo-soprano arias & oratorio excerpts</li>
+                    <li>Bach — Soprano Cantatas</li>
+                    <li>Handel — Arias & <em>Messiah</em> excerpts</li>
+                    <li>Pergolesi — <em>Stabat Mater</em> (Soprano I)</li>
                 </ul>
             </div>
+        </div>
+    </section>
+
+    <!-- Artist Statement Section -->
+    <section id="statement" class="biography statement-section">
+        <div class="container">
+            <h2 class="section-title">Artist Statement</h2>
+            <blockquote class="artist-statement">
+                <p>“I sing because music reveals what words cannot. My goal is to approach every piece with sincerity, respect for the composer and a commitment to beauty and clarity of expression. I am inspired by the emotional truth behind the music and the shared experience with the audience.”</p>
+                <cite>— Zlata Beltran</cite>
+            </blockquote>
         </div>
     </section>
 
@@ -135,6 +153,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Contact</h2>
+            <p class="press-contact-intro">For bookings, interviews and press materials:</p>
             <div class="contact-content">
                 <div class="contact-item">
                     <span class="contact-label">Email:</span>
@@ -177,12 +196,12 @@
                     <a href="#" class="footer-link" id="privacy-link">Privacy & Cookie Policy</a>
                 </div>
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/zlata.coloratura?igsh=MWR1c3VhOHZsdjI2OQ%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Instagram">
+                    <a href="https://www.instagram.com/zlata.coloratura/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Instagram">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                         </svg>
                     </a>
-                    <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook">
+                    <a href="#" class="social-icon" aria-label="Facebook (coming soon)" title="Facebook (coming soon)">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
                         </svg>
